  * Timed Text - List view context menu "Set language" had wrong text
  * Subtitle preview can now show both font and italic for same text - thx Drago
  * Fixed bug decoding dvb sub - thx aMvEL
  * Fixed possible crash in OCR window (if no language is available)
  * "OCR window" - Norweigan bokmål now works as spell check language


3.3.12 (12th January 2013)
* NEW:
   * Added initial support for importing DVB subtitles from transport streams
   * Added "File -> Import images"
   * Added "Tools -> Merge lines with same text"
   * Importing from plain text file,  "One line is one subtitle" now has a 
     "Line break" option - thx Adrian   
   * Added xml subtitle format "FLVCoreCuePoints" - thx Jon
   * Added some support for fxpxml 1.3
   * Added link to Sinhala spell check dictionary
* IMPROVED:
   * Updated Portuguese language file - thx moob
   * Updated Vietnamese language file - thx everytime
   * Updated Basque language file - thx Xabier
   * Updated Korean language file - thx domddol
   * Updated Brazilian Portuguese language file - thx Igor Rückert
   * Updated Croatian language file - thx Jozo Marić
   * Now remembers RTL mode - thx FTABoy
   * Export images from DVD now only shows relevant options
   * Fix short durations will now see if line can start earlier - thx Daniel
   * "File -> Import plain text" can now import from multiple files
   * "Save as..." now remembers subtitle format
   * Now detects VobSub/Bluray-sup with wrong extension when opening a file
   * Now gives nice error message when opening idx, rar or zip files
   * French rules regarding spaces/!?:; in "Fix common errors" - thx René
   * Compare window, now left list view will also sync - thx Krystian
* FIXED:
  * Fixed bug in "Fix common errors: Remove hyphen" - thx honeybunny
  * Fixed bug in "Remove text for HI" issue - thx cipry15
  * Fixed bug in "Auto br" - thx XhmikosR
  * Split up D-Cinema smtp to 2007 and 2010 versions - thx Knut